--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             color: #fff;
             font-weight: 900;
             /* Tự động chỉnh cỡ chữ theo chiều rộng màn hình */
-            font-size: clamp(2rem, 8vw, 5rem); 
+            font-size: clamp(1.5rem, 6vw, 4rem); 
             line-height: 1.2;
             text-shadow: 
                 0 0 10px #ff0055,
@@ -132,7 +132,7 @@
     <div id="textScreen" class="screen">
         <div class="glowing-text">
             CHÚC MỪNG NĂM MỚI!<br>
-            <span id="pName" style="color: #ffcc00;">BẠN</span> 🏮
+            🐎 <span id="pName" style="color: #ffcc00;">BẠN</span> 🐎
         </div>
     </div>
 
@@ -378,4 +378,5 @@
 
     </script>
 </body>
+
 </html>
