--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div id="textScreen" class="screen">
         <div class="glowing-text">
             CHÚC MỪNG NĂM MỚI!<br>
-            🐎 <span id="pName" style="color: #ffcc00;">BẠN</span> 🐎
+            🐎 <span id="pName" style="color: #ffcc00;">Bạn DAnh</span> 🐎
         </div>
     </div>
 
@@ -380,3 +380,4 @@
 </body>
 
 </html>
+
